--- a/controllerVNF/Metadata.yaml
+++ b/controllerVNF/Metadata.yaml
@@ -1,8 +1,10 @@
 name: sdp-controller
-description: SDP controller
 provider: JAS
-nfvo_version: 6.0.0
+nfvo-version: 6.0.0
 vim_types:
-    - openstack
+ - openstack
 image:
-	link:http://releases.ubuntu.com/14.04/ubuntu-14.04.5-server-amd64.iso
+    upload: true
+    names:
+      - ubuntu-14.04.5-server-amd64
+    link: "http://releases.ubuntu.com/14.04/ubuntu-14.04.5-server-amd64.iso"
