--- a/controllerVNF/scripts/Dockerfile
+++ b/controllerVNF/scripts/Dockerfile
@@ -3,12 +3,13 @@ FROM ubuntu:14.04
 EXPOSE 5000
 
 WORKDIR /controller
+ENV DB_HOST=controller
 
 COPY * /controller/
-
+RUN echo 'debconf debconf/frontend select Noninteractive' | debconf-set-selections
 RUN ./install.sh
-RUN ./certs.sh
 RUN ./setupMySQL.sh
+RUN ./certs.sh
+CMD ["/bin/bash", "-c","/controller/run.sh"]
 
-CMD [" ./run.sh"]
 
