working dockerfile for vnf deployment

--- a/controllerVNF/scripts/Dockerfile
+++ b/controllerVNF/scripts/Dockerfile
@@ -3,7 +3,7 @@ FROM ubuntu:14.04
 EXPOSE 5000
 
 WORKDIR /controller
-ENV DB_HOST=controller
+ENV DB_HOST=$hostname
 
 COPY * /controller/
 RUN echo 'debconf debconf/frontend select Noninteractive' | debconf-set-selections
