save thsese pls

--- a/gatewayVNF/Dockerfile
+++ b/gatewayVNF/Dockerfile
@@ -1,13 +1,10 @@
 FROM ubuntu:14.04
 
 WORKDIR /gateway
-ENV DB_HOST=$hostname
 
 COPY * /gateway/
 RUN echo 'debconf debconf/frontend select Noninteractive' | debconf-set-selections
 RUN ./install.sh
-#RUN ./setupMySQL.sh
-#RUN ./certs.sh
-#CMD ["/bin/bash", "-c","/controller/run.sh"]
+CMD ["/bin/bash","-c", " ./fwknopSetup.sh $SERVER_HOSTNAME"]
 
 
