--- a/controllerVNF/scripts/Dockerfile
+++ b/controllerVNF/scripts/Dockerfile
@@ -3,8 +3,8 @@ FROM ubuntu:14.04
 EXPOSE 5000
 
 WORKDIR /controller
-ENV DB_HOST=$hostname
-
+ENV DB_HOST=$HOSTNAME
+ENV IP=$SDPNETWORK
 COPY * /controller/
 RUN echo 'debconf debconf/frontend select Noninteractive' | debconf-set-selections
 RUN ./install.sh
