--- a/gatewayVNF/conf/fwknopd.conf
+++ b/gatewayVNF/conf/fwknopd.conf
@@ -123,7 +123,7 @@ SDP_CTRL_CLIENT_CONF   /etc/fwknop/gate_sdp_ctrl_client.conf;
 # Default if not set is eth0.  The '-i <intf>' command line option overrides
 # the PCAP_INTF setting.
 #
-PCAP_INTF                   enp0s3;
+PCAP_INTF                   eth0;
 
 # By default fwknopd does not put the pcap interface into promiscuous mode.
 # Set this to 'Y' to enable promiscuous sniffing.
